# codex-gateway

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md
docs/: codex-mitm-test-env.md  codex-protocol.md  current-architecture.md  design.md  features.md  stage-0-baseline.md
fixtures/: stage5-http-contracts.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
infra/codex-mitm-lab/: Dockerfile  docker-compose.yml
migrations/: 20260709000100_phase_one_schema.sql  20260709000200_request_log_metadata.sql  20260710000100_gap3_security.sql  20260710000200_gap4_routing_health.sql  20260710000300_gap5_observability_indexes.sql  20260710000400_request_id_non_unique.sql  20260710000500_gap1_limits.sql  20260710000600_gap4_runtime_config.sql
scripts/: analyze-codex-mitm-flows.py  build-release.sh  codex-mitm-lab.sh
src/: clock.rs  finalization.rs  http_error.rs  lib.rs  main.rs  secrets.rs  web.rs
src/api/: auth.rs  contracts.rs  error.rs  keys.rs  limits.rs  mod.rs  models.rs  observability.rs  settings.rs  upstreams.rs  users.rs
src/auth/: mod.rs  persistence.rs
src/config/: mod.rs
src/proxy/: attempt.rs  headers.rs  mod.rs  planning.rs  request.rs  settlement.rs  streaming.rs
src/routing/: mod.rs
src/storage/: analytics.rs  api_keys.rs  audit.rs  db.rs  limits.rs  mod.rs  models.rs  request_logs.rs  runtime_config.rs  (+3 more)
tests/: admin_identity.rs  analytics.rs  auth.rs  limits.rs  module_boundaries.rs  phase_one.rs  proxy.rs  routing.rs  security.rs  settings.rs
(+60 files in other folders)
